--- a/dist_container_plus_child1_plus_child2/child1/index.html
+++ b/dist_container_plus_child1_plus_child2/child1/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="refresh" content="0; URL=http://localhost:3000?" />
 </head>
 <body>
   <child1-root></child1-root>
