--- a/dist_container_plus_child1_plus_child2/child4/index.html
+++ b/dist_container_plus_child1_plus_child2/child4/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/roboto300,400,500.har" rel="stylesheet">
   <link href="assets/material+icons.har" rel="stylesheet">
+  <meta http-equiv="refresh" content="0; URL=http://localhost:3000/" />
 </head>
 <body>
   <app-qlist-root>
